--- a/styles/scss/colors.scss
+++ b/styles/scss/colors.scss
@@ -1,4 +1,5 @@
 $headerColor: #134880;
 $textColor: #484A4C;
-$borderColor: black;
+$borderColor: #DDDDDD;
 $borderColorHover: #134880;
+$buttonColor: white;
