--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -15,12 +15,47 @@ html, body {
 }
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1 / 3;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / 2;
+  gap: 20px;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.box1 {
+  width: 300px;
+  height: 100px;
+  background-color: #DDDDDD;
+}
+
+.box2 {
+  width: 620px;
+  height: 100px;
+  background-color: #DDDDDD;
+}
+
+.headerFooterText {
+  text-align: justify;
+  font-family: "Helvetica Neue";
+  font-size: 1.1vw;
+  line-height: 18px;
+  width: 245px;
+  color: #FFFFFF;
+  margin-top: 40px;
+  margin-left: 80px;
+  margin-bottom: 40px;
+}
+
+.headerFooterText:after {
+  content: "";
+  display: inline-block;
+  width: 100%;
 }
 
 aside {
@@ -71,6 +106,8 @@ footer {
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3 / 4;
+  background-color: #DDDDDD;
+  border-radius: 0px 0px 5px 5px;
 }
 
 .flex-container-1 {
