--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -25,8 +25,41 @@ html, body{
 }
 
 header {
+  display: flex;
   grid-column: 1 / 3;
   grid-row: 1 / 2;
+  gap: 20px;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.box1{
+  width: 300px;
+  height: 100px;
+  background-color: #DDDDDD;
+}
+
+.box2{
+  width: 620px;
+  height: 100px;
+  background-color: #DDDDDD;
+}
+
+.headerFooterText{
+  text-align: justify;
+  font-family: "Helvetica Neue";
+  font-size: 1.1vw;
+  line-height: 18px;
+  width: 245px;
+  color: #FFFFFF;
+  margin-top: 40px;
+  margin-left: 80px;
+  margin-bottom: 40px;
+}
+
+.headerFooterText:after {
+  content: "";
+  display: inline-block;
+  width: 100%;
 }
 
  aside {
@@ -63,6 +96,8 @@ main {
 footer {
   grid-column: 1 / 3;
   grid-row: 3 / 4;
+  background-color:  #DDDDDD;
+  border-radius: 0px 0px 5px 5px;
 }
 
 .flex-container-1{
